# coreguard

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: JSON_SCHEMA.md  coreguard_wasm.d.ts  coreguard_wasm.js  coreguard_wasm_bg.wasm  coreguard_wasm_bg.wasm.d.ts  index.html  worker.js
docs/wasm/: coreguard_wasm.d.ts  coreguard_wasm.js  coreguard_wasm_bg.wasm  coreguard_wasm_bg.wasm.d.ts  package.json
schema/: config.example.yaml
scripts/: make_demo_config.sh
src/: bam_validate.rs  cluster.rs  compare.rs  config.rs  empty_column.rs  fasta.rs  gaps.rs  gff.rs  impact.rs  main.rs  metrics.rs  output.rs  pairwise.rs  pileup.rs  reads.rs  reference.rs  scoring.rs  serve.rs  snp_compare.rs  vcf.rs  vcf_compare.rs
src/parsers/: cfsan.rs  coreguard_tsv.rs  mod.rs  snippy.rs
testdata/: demo_config.template.yaml  demo_config.yaml  demo_description.md
wasm/: Cargo.toml
wasm/src/: lib.rs
