[package]
name = "coreguard"
version = "0.1.0"
edition = "2021"
authors = ["A. De Ruvo <andrea.deruvo@gssi.it>"]
description = "Pre-alignment QC framework for identifying problematic samples in SNP analysis"
license = "MIT"
repository = "https://github.com/genpat-it/coreguard"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Bioinformatics
bio = "2.0"
needletail = "0.6"
noodles = { version = "0.84", features = ["bam", "bgzf", "csi", "sam", "core"] }

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
bincode = "1.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
log = "0.4"

# Date/time
chrono = "0.4"
env_logger = "0.11"

# Progress bars
indicatif = "0.17"

# Utilities
num_cpus = "1.16"
tempfile = "3"
md5 = "0.7"
flate2 = "1.0"

# Web server (for --serve)
tiny_http = { version = "0.12", optional = true }
webbrowser = { version = "1.0", optional = true }
open = { version = "5", optional = true }

[features]
default = ["serve"]
serve = ["tiny_http", "webbrowser", "open"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 4
