[package]
name = "coreguard-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM module for coreguard nucleotide viewer"
repository = "https://github.com/genpat-it/coreguard"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "s"  # Optimize for size
lto = true
